Updating SF DFP mapping and targeting for new Sports section front, adjust styling for some content and layout issues.

--- a/assets/css/scss/base/_layout.scss
+++ b/assets/css/scss/base/_layout.scss
@@ -457,6 +457,19 @@
 				.sidebar {
 					width:auto;
 				}
+				.three-block {
+					width: 100%;
+				}
+			}
+			.more-stories-container {
+				.stories {
+					width: 100%;
+				}
+				.mini-stories {
+					.lead-story {
+						border-bottom:none;
+					}
+				}
 			}
 		}
 	}
